--- a/Challenge_2.ipynb
+++ b/Challenge_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjMMIFtAVRkI+P8nLs6NSr",
+      "authorship_tag": "ABX9TyOUe2vyQtgI1xoThJZlTK2R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,20 +38,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OciDZKstPQhd",
-        "outputId": "959c8f36-e505-4585-b9be-658db8c6df5b"
+        "outputId": "4535266f-e189-463f-da05-546edc0bfc6e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0, 0, 1, 1, 0, 1, 1, 0]\n"
+            "How many times to flip? 2\n",
+            "[1, 0]\n"
           ]
         }
       ],
@@ -59,9 +60,10 @@
         "import numpy as np\n",
         "\n",
         "def coin_flip(n):\n",
+        "    n = int(input(\"How many times to flip? \"))\n",
         "    return np.random.randint(0, 2, n)\n",
         "\n",
-        "print ([var for var in coin_flip(8)])"
+        "print ([var for var in coin_flip(n)])"
       ]
     }
   ]
