--- a/Exercise2.ipynb
+++ b/Exercise2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0aZFBx+mLrreZ9qtMM7UM",
+      "authorship_tag": "ABX9TyPFAOFLDWrjmurjYNaD4X6c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "id": "OZdAWa18vTGh",
         "outputId": "fe86e3d6-2a4a-481f-880f-5d4982dff7aa"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,6 +66,47 @@
             "0     Cat      13\n",
             "1     Dog      17\n",
             "2  Rabbit       8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example 2"
+      ],
+      "metadata": {
+        "id": "SZRuoCv02yip"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "a = [1, 7, 2]\n",
+        "\n",
+        "myvar = pd.Series(a)\n",
+        "\n",
+        "print(myvar)"
+      ],
+      "metadata": {
+        "id": "dpDCzEJq21DZ",
+        "outputId": "1fd7220d-b853-4013-d5b6-8f545b0b7f6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    1\n",
+            "1    7\n",
+            "2    2\n",
+            "dtype: int64\n"
           ]
         }
       ]
