--- a/Exercise2.ipynb
+++ b/Exercise2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFAOFLDWrjmurjYNaD4X6c",
+      "authorship_tag": "ABX9TyN8XxPWkP40RFkWYdDyCeV8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,13 +91,13 @@
         "print(myvar)"
       ],
       "metadata": {
-        "id": "dpDCzEJq21DZ",
-        "outputId": "1fd7220d-b853-4013-d5b6-8f545b0b7f6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dpDCzEJq21DZ",
+        "outputId": "1eeecb9b-a8d6-44dc-f79d-6e651eca5e61"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,6 +107,93 @@
             "1    7\n",
             "2    2\n",
             "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example 3"
+      ],
+      "metadata": {
+        "id": "bwupBbEB8D3K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "data = {\n",
+        "    \"age\": [42, 38, 39],\n",
+        "    \"weight\": [50, 40, 45]}\n",
+        "\n",
+        "myvar = pd.DataFrame(data)\n",
+        "\n",
+        "print(myvar)"
+      ],
+      "metadata": {
+        "id": "RQkZLivJ8HFD",
+        "outputId": "0b95439b-08ab-402f-95f8-b5c7cbb7bb91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   age  weight\n",
+            "0   42      50\n",
+            "1   38      40\n",
+            "2   39      45\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example 4"
+      ],
+      "metadata": {
+        "id": "hszx7NXM-l0T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "data = {\n",
+        "\"age\": [42, 38, 39],\n",
+        "\"weight\":[50,40,45]\n",
+        "}\n",
+        "\n",
+        "myvar=pd.DataFrame(data)\n",
+        "\n",
+        "print(myvar.loc[[0,1,2]])"
+      ],
+      "metadata": {
+        "id": "RPTykTwo-ous",
+        "outputId": "31118ec4-6df3-4e0c-f95a-202c625c8c49",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   age  weight\n",
+            "0   42      50\n",
+            "1   38      40\n",
+            "2   39      45\n"
           ]
         }
       ]
