--- a/Exercise2.ipynb
+++ b/Exercise2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8XxPWkP40RFkWYdDyCeV8",
+      "authorship_tag": "ABX9TyOiWaKXI6ORVh5vn8Ap21xB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,11 +40,9 @@
       "source": [
         "import pandas\n",
         "\n",
-        "mydataset = {\n",
-        "'animals': [\"Cat\", \"Dog\", \"Rabbit\"],\n",
-        "'height': [13, 17, 8]\n",
-        "}\n",
-        "\n",
+        "mydataset = {'animals': [\"Cat\",\"Dog\",\"Rabbit\"],\n",
+        "             'height': [13,17,8]\n",
+        "            }\n",
         "myvar = pandas.DataFrame(mydataset)\n",
         "\n",
         "print(myvar)"
@@ -54,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OZdAWa18vTGh",
-        "outputId": "fe86e3d6-2a4a-481f-880f-5d4982dff7aa"
+        "outputId": "40fa697e-1e5e-4242-bdda-254cdb5ac355"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,12 +81,11 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "\n",
-        "a = [1, 7, 2]\n",
+        "a = [1.5,7.5,2.5]\n",
         "\n",
         "myvar = pd.Series(a)\n",
         "\n",
-        "print(myvar)"
+        "print(myvar[0])"
       ],
       "metadata": {
         "colab": {
@@ -97,7 +94,7 @@
         "id": "dpDCzEJq21DZ",
         "outputId": "1eeecb9b-a8d6-44dc-f79d-6e651eca5e61"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,33 +164,122 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
+        "#series using data frames\n",
+        "s1 = pd.Series([0,4,8])\n",
+        "s2 = pd.Series([1,5,9])\n",
+        "s3 = pd.Series([2,6,10])\n",
+        "s4 = pd.Series([5,10,15])\n",
         "\n",
-        "data = {\n",
-        "\"age\": [42, 38, 39],\n",
-        "\"weight\":[50,40,45]\n",
-        "}\n",
+        "dframe = pd.DataFrame([s1,s2,s3,s4])\n",
+        "#dframe =dframe.drop([0])\n",
+        "#print(dframe)\n",
         "\n",
-        "myvar=pd.DataFrame(data)\n",
-        "\n",
-        "print(myvar.loc[[0,1,2]])"
+        "print(dframe)"
       ],
       "metadata": {
         "id": "RPTykTwo-ous",
-        "outputId": "31118ec4-6df3-4e0c-f95a-202c625c8c49",
+        "outputId": "5cb23e0a-8019-478a-fbe3-59ba60f0c7a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   age  weight\n",
-            "0   42      50\n",
-            "1   38      40\n",
-            "2   39      45\n"
+            "   0   1   2\n",
+            "0  0   4   8\n",
+            "1  1   5   9\n",
+            "2  2   6  10\n",
+            "3  5  10  15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example 5"
+      ],
+      "metadata": {
+        "id": "QLy0hQPsI5Gu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "s1 = pd.Series([0,4,8])\n",
+        "s2 = pd.Series([1,5,9])\n",
+        "s3 = pd.Series([2,6,10])\n",
+        "s4 = pd.Series([5,10,15])\n",
+        "\n",
+        "#creating multi-dimensional table\n",
+        "dframe = pd.DataFrame([s1,s2,s3,s4],index =[0,1,2,3], columns =[0,1,2])\n",
+        "print(dframe)"
+      ],
+      "metadata": {
+        "id": "zFk-HZcdI8jk",
+        "outputId": "b3254a3a-a91b-410d-c147-d0cd5c659058",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   0   1   2\n",
+            "0  0   4   8\n",
+            "1  1   5   9\n",
+            "2  2   6  10\n",
+            "3  5  10  15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Challenge 2"
+      ],
+      "metadata": {
+        "id": "IDdA3cZEJtCQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "#series using data frames\n",
+        "s1 = pd.Series([0,4,8])\n",
+        "s2 = pd.Series([1,5,9])\n",
+        "s3 = pd.Series([2,6,10])\n",
+        "s4 = pd.Series([5,10,15])\n",
+        "\n",
+        "dframe = pd.DataFrame([s1,s2,s3,s4])\n",
+        "df = dframe.drop(index = [0,1,3])\n",
+        "print(df)"
+      ],
+      "metadata": {
+        "id": "Tj0Xn5UMJwVP",
+        "outputId": "bc01107b-c7de-4d6c-fd86-8f42caa73b58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   0  1   2\n",
+            "2  2  6  10\n"
           ]
         }
       ]
