--- a/Exercise1.ipynb
+++ b/Exercise1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNijPL8he51Zkoj3DypaFsQ",
+      "authorship_tag": "ABX9TyM4U9xwUti9YfywhSiAFe9j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/FDMasangkay/CPE-031-VDA-CPE-21S4/blob/main/Exercise_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/FDMasangkay/CPE-031-VDA-CPE-21S4/blob/main/Exercise1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1427,6 +1427,56 @@
       "metadata": {
         "id": "URNrJFqlIrhy"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Challenge 1"
+      ],
+      "metadata": {
+        "id": "AWdyMkUB6Er8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Coin Flip"
+      ],
+      "metadata": {
+        "id": "7EGiZyXa6Gvy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "n = int(input(\"How many times to flip? \"))\n",
+        "\n",
+        "def coin_flip(n):\n",
+        "    return np.random.randint(0, 2, n)\n",
+        "\n",
+        "\n",
+        "print ([var for var in coin_flip(n)])"
+      ],
+      "metadata": {
+        "id": "Wv1HZsFX6ILu",
+        "outputId": "d330535c-f7eb-4c79-9070-04838d952045",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many times to flip? 10\n",
+            "[1, 0, 1, 0, 1, 1, 1, 1, 0, 0]\n"
+          ]
+        }
+      ]
     }
   ]
 }
