--- a/Exercise3.ipynb
+++ b/Exercise3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObaqXvQEEN7ayUoKyr08RI",
+      "authorship_tag": "ABX9TyNenHLQNzKl64636NbFXEHU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -389,13 +389,13 @@
       "metadata": {
         "id": "r3GB71Py6rZq"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "1. Import SampleData.csv to Google Colab"
+        "### 1. Import SampleData.csv to Google Colab"
       ],
       "metadata": {
         "id": "0_g3DDN0CSqI"
@@ -416,7 +416,7 @@
           "height": 71
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -624,7 +624,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Read the contents of SampleData.csv"
+        "### 2. Read the contents of SampleData.csv"
       ],
       "metadata": {
         "id": "T5faySeHCZFn"
@@ -638,13 +638,13 @@
       "metadata": {
         "id": "yTcRz3PQ69Xi"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "3. Show all top 10 records"
+        "### 3. Show all top 10 records"
       ],
       "metadata": {
         "id": "TJaV-300CfpY"
@@ -662,7 +662,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +686,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Show all bottom 10 records"
+        "### 4. Show all bottom 10 records"
       ],
       "metadata": {
         "id": "Ubuid5B6Ciqw"
@@ -704,7 +704,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,7 +728,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. Eliminate all duplicated records"
+        "### 5. Eliminate all duplicated records"
       ],
       "metadata": {
         "id": "yR9g1qyrCm_Y"
@@ -743,12 +743,12 @@
       ],
       "metadata": {
         "id": "DJNEvuCS7m-i",
-        "outputId": "e49f54d1-fb74-461e-a546-0ce838730c8a",
+        "outputId": "e4503221-4b0f-4799-f300-ed73290ee314",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,14 +769,12 @@
             "12    False\n",
             "13    False\n",
             "14    False\n",
-            "15     True\n",
             "16    False\n",
             "17    False\n",
             "18    False\n",
             "19    False\n",
             "20    False\n",
             "21    False\n",
-            "22     True\n",
             "23    False\n",
             "24    False\n",
             "25    False\n",
@@ -788,8 +786,6 @@
             "31    False\n",
             "32    False\n",
             "33    False\n",
-            "34     True\n",
-            "35     True\n",
             "36    False\n",
             "37    False\n",
             "38    False\n",
@@ -817,7 +813,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +869,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "6. Save the contens (removed duplicated records) into new file SampleDataNew.csv"
+        "### 6. Save the contens (removed duplicated records) into new file SampleDataNew.csv"
       ],
       "metadata": {
         "id": "DQHuKjDqCv9Q"
@@ -887,7 +883,7 @@
       "metadata": {
         "id": "BvxLNjuM9bfy"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -903,7 +899,7 @@
           "height": 1000
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,6 +1668,77 @@
           },
           "metadata": {},
           "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 7. Display the 1st and 2nd columns"
+      ],
+      "metadata": {
+        "id": "-DY-lc47NLut"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(sd[['OrderDate', 'Region']])"
+      ],
+      "metadata": {
+        "id": "sfSOm0l8LNC-",
+        "outputId": "963d1ab3-3f98-4bb6-9212-9661ae31de25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   OrderDate   Region\n",
+            "0     1/6/21     East\n",
+            "1    1/23/21  Central\n",
+            "2     2/9/21  Central\n",
+            "3    2/26/21  Central\n",
+            "4    3/15/21     West\n",
+            "5     4/1/21     East\n",
+            "6    4/18/21  Central\n",
+            "7     5/5/21  Central\n",
+            "8    5/22/21     West\n",
+            "9     6/8/21     East\n",
+            "10   6/25/21  Central\n",
+            "11   7/12/21     East\n",
+            "12   7/29/21     East\n",
+            "13   8/15/21     East\n",
+            "14    9/1/21  Central\n",
+            "16   10/5/21  Central\n",
+            "17  10/22/21     East\n",
+            "18   11/8/21     East\n",
+            "19  11/25/21  Central\n",
+            "20  12/12/21  Central\n",
+            "21  12/29/21     East\n",
+            "23    2/1/22  Central\n",
+            "24   2/18/22     East\n",
+            "25    3/7/22     West\n",
+            "26   3/24/22  Central\n",
+            "27   4/10/22  Central\n",
+            "28   4/27/22     East\n",
+            "29   5/14/22  Central\n",
+            "30   5/31/22  Central\n",
+            "31   6/17/22  Central\n",
+            "32    7/4/22     East\n",
+            "33   7/21/22  Central\n",
+            "36   9/10/22  Central\n",
+            "37   9/27/22     West\n",
+            "38  10/14/22     West\n",
+            "39  10/31/22  Central\n",
+            "40  11/17/22  Central\n",
+            "41   12/4/22  Central\n",
+            "42  12/21/22  Central\n"
+          ]
         }
       ]
     }
